--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="Content-Type" content="UTF-8">
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -26,7 +25,7 @@
         </section>
     </main>
     <footer>
-        <p>Thanks for <a href="https://github.com/toidicode/template">Toidicode</a>'s work ❤️</p>
+        <p>Thanks for <a href="https://github.com/toidicode/template">Toidicode</a>'s work ❤️, by <a href="https://nothingelse.fr/">NothingElse.fr</a>.</p>
     </footer>
     <script src="js/scripts.js"></script>
 </body>
