[Feautre] Update footer + icon

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         </section>
     </main>
     <footer>
+        <a href="https://github.com/Liam-Nothing/Templates-Presentation">
+            <img src="img/GitHub_Logo.png" class="github-logo"/>
+        </a>
         <p>Thanks for <a href="https://github.com/toidicode/template">Toidicode</a>'s work ❤️, by <a href="https://nothingelse.fr/">NothingElse.fr</a>.</p>
     </footer>
     <script src="js/scripts.js"></script>
